# iso26262-llm-test-framework

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
Lab/: CMakeLists.txt  boolean_algebra.cpp  math_lib.cpp  real_world.cpp
Lab/includes/: boolean_algebra.h  math_lib.h  real_world.h
Lab/tests/: boolean_algebra_tests.cpp  dimi.cpp  dimis_supadupa.cpp  math_lib_tests.cpp  real_world_tests.cpp
main/: CMakeLists.txt  main.cpp
prompts/: ASIL_b_assistant_test_instructions.md  ASIL_d_assistant_test_instructions.md  common_ASIL_assistant_test_instructions.md
prompts/knowledge/: equivalence_partitioning_boundary.md  hints_for_testing.md  mcc.md  mcdc.md
